# KomodoEdit

./: .gitignore  README.md  bklocal.py  make-komodo-layout.sh  run-komodo-clean.sh  run-komodo.sh
contrib/pyxpcom/: .hgignore  Makefile.in  README.txt  (+4 more)
docs/: reproducible-linux-workflow.md
mozilla/: build.py
qtedit/: .gitignore  pyproject.toml  requirements.txt  snapcraft.yaml  spike.py
qtedit/qtedit/: __main__.py  codeintel_client.py  completion_popup.py  editor.py  find_bar.py  find_in_files.py  find_in_files_dialog.py  icons.py  langinfo.py  main_window.py  prefs.py  prefs_dialog.py  process.py  session.py  textinfo.py  vcs.py  vcs_dock.py  which.py
qtedit/qtedit/SilverCity/: Keywords.py  Lexer.py  __init__.py  python_lexer.py
qtedit/qtedit/codeintel3/: __init__.py  accessor.py  buffer.py  citadel.py  common.py  environment.py  hooks.py  indexer.py  lang_python.py  langintel.py  manager.py  oop_driver_main.py  pythoncile.py  pythoncile1.py  tdparser.py  tree.py  tree_python.py  udl.py  util.py
qtedit/qtedit/codeintel3/database/: catalog.py  database.py  langlib.py  langlibbase.py  multilanglib.py  projlib.py  resource.py  stdlib.py
qtedit/qtedit/codeintel3/oop/: __init__.py  controller.py  driver.py  memory_reporter.py
qtedit/qtedit/debugger/: dbgp.py  protocol.py  session.py  tracee.py
qtedit/qtedit/projects/: model.py  tree_model.py
qtedit/qtedit/toolbox/: item_dialog.py  model.py  tree_model.py
qtedit/qtedit/udl/: interpreter.py  lexres.py  styles.py
scripts/: komodo-repro.sh
util/: patchtree.py  platinfo.py  preprocess.py  sh.py  which.py
(+129 files in other folders)
